--- a/DreamScaper/package.json
+++ b/DreamScaper/package.json
@@ -4,12 +4,12 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "mkdir -p .vercel/output/static && cp -r components services App.tsx index.html index.tsx metadata.json types.ts .vercel/output/static/"
+    "build": "mkdir -p public && cp -r components services App.tsx index.html index.tsx metadata.json types.ts public/"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "lucide-react": "^0.468.0",
-    "@google/genai": "^1.30.0"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "lucide-react": "0.468.0",
+    "@google/genai": "1.30.0"
   }
 }
