--- a/DreamScaper/vercel.json
+++ b/DreamScaper/vercel.json
@@ -1,8 +1,9 @@
 
 {
-  "cleanUrls": true,
+  "version": 2,
   "framework": "vite",
   "outputDirectory": "dist",
+  "cleanUrls": true,
   "rewrites": [
     {
       "source": "/(.*)",
