--- a/DreamScaper/package.json
+++ b/DreamScaper/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "dreamscapers-pro",
   "version": "1.0.0",
@@ -9,20 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.30.0",
-    "lucide-react": "^0.468.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "lucide-react": "^0.468.0",
+    "@google/genai": "^1.30.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.1",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.2"
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.12",
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.3"
   },
   "engines": {
     "node": ">=18.0.0"
   }
 }
+
 
