--- a/DreamScaper/vercel.json
+++ b/DreamScaper/vercel.json
@@ -1,6 +1,6 @@
-
 {
-  "version": 2,
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
   "framework": "vite",
   "outputDirectory": "dist",
   "cleanUrls": true,
