--- a/DreamScaper/package.json
+++ b/DreamScaper/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "dreamscapers-pro",
   "version": "1.0.0",
@@ -16,11 +15,11 @@
     "@google/genai": "^1.30.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.12",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
     "typescript": "^5.7.2",
-    "vite": "^6.0.3"
+    "vite": "^5.4.2"
   },
   "engines": {
     "node": ">=18.0.0"
